--- a/Aula0/index.html
+++ b/Aula0/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 0</title>
+    <link rel = "stylesheet" href="css/style.css"/>
+    <link rel="icon" href="img/folha.png"/>
+    <title>Aula 1</title>
 </head>
 <body>
     <h1>Teste</h1>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas fugit enim pariatur cumque ab hic, sed quisquam earum in quod eos error suscipit amet quibusdam repellat vitae soluta mollitia necessitatibus.
+    </p>
+    <a href="https://google.com" target="_blank">Google</a> <br> <br>
+    <img src="img/BoluDiMurango.jfif" alt="Bolo de Morango" />
+
+    <a href="botoes.html"><button class="but">Botões</button></a>
 </body>
 </html>
