--- a/Aula1/botoes.html
+++ b/Aula1/botoes.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/styleButton.css">
 </head>
 <body>
-    
-    <button class="yt">Subscribe</button>
-    <button class="lk">JOIN</button>
-    <button class="x">Tweet</button>
+    <div class="buttons">
+        <button class="yt">Subscribe</button>
+        <button class="lk">JOIN</button>
+        <button class="x">Tweet</button>
+    </div>
 </body>
 </html>
