--- a/Aula3/forms.html
+++ b/Aula3/forms.html
@@ -31,7 +31,38 @@
                 <option value="rj">Rio de Janeiro</option>
             </select>
         </div>
-        <input type="submit" value="finalizar">
+            <p>Escolha sua linguagem de programação preferida: </p>
+
+            <div class="">
+                <input type="radio" name="favlinguagem" id="python" value="python">
+                <label for="python">Python</label>
+            </div>
+            <div class="">
+                <input type="radio" name="favlinguagem" id="java" value="java">
+                <label for="java">Java</label>
+            </div>
+            <div class="">
+                <input type="radio" name="favlinguagem" id="c#" value="c#">
+                <label for="c#">C#</label>
+            </div>
+
+            <div>
+                <p>Selecione os itens comprados</p>
+                <div class="">
+                    <input type="checkbox" id="refrigerante" name="referigerante">
+                    <label for="refrigerante">Refrigerante</label>
+                </div>
+                <div class="">
+                    <input type="checkbox" id="salgadinho" name="salgadinho">
+                    <label for="salgadinho">Salgadinho</label>
+                </div>
+            </div>
+            
+            <label for="txtArea">Fala aí pra mim da sua vida</label> <br>
+            <textarea name="txtArea" id=""></textarea>
+
+
+        <input type="submit" value="finalizar" style="display:block">
 
     </form>
     
