--- a/2_SEM/Aula2/02-airbnb.html
+++ b/2_SEM/Aula2/02-airbnb.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airbnb Grid Layout</title>
+    <title>Acampe no estojo da Polly Pocket em Westford, Massachussets, Estados Unidos</title>
     <link rel="stylesheet" href="02-airbnb.css">
+    <link rel="icon" href="img/airbnb-1.svg">
 </head>
 <body>
     <main>
