--- a/2_SEM/Aula2/src/pages/home/index.html
+++ b/2_SEM/Aula2/src/pages/home/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="../../../public/assets/img/airbnb-1.svg">
 </head>
+<!-- 
+    Site clone do Airbnb - Programado apenas para fins educativos
+    Link do site original - https://www.airbnb.com.br/rooms/1177661634882168657?adults=1&category_tag=Tag%3A8851&children=0&enable_m3_private_room=true&infants=0&pets=0&search_mode=flex_destinations_search&source_impression_id=p3_1724278897_P3neXwncOavMyT5A&previous_page_section_name=1000&federated_search_id=b92a0966-4b48-44cf-a4aa-d12caf5e9b99
+-->
 <body>
     <main>
 		<nav class="nav">
@@ -73,80 +77,82 @@
                     <img src="../../../public/assets/img/planta-da-casa-da-polly-pocket.webp" alt="Imagem da galeria">
                 </div>
             </div>
-            <div class="room-info">
-                <div class="info-box">
-                    <div class="info">
-                        <div class="title-info">
-                            <h1>Westford, Massachussets, Estados Unidos</h1>
-                            <ul class="title-items">
-                                <li class="room-item">4 Hóspedes</li>
-                                <div>
-                                    <span class="ball"></span>
-                                    <li class="room-item">1 Quarto</li>
-                                </div>
-                                <div>
-                                    <span class="ball"></span>
-                                    <li class="room-item">5 Camas</li>
-                                </div>
-                                <div>
-                                    <span class="ball"></span>
-                                    <li class="room-item">Lavabo privado</li>
-                                </div>
-                            </ul>
-                        </div>
-                        <div class="host">
-                            <div class="host-info">
-                                <div class="host-image-box">
-                                    <img class="host-image" src="https://a0.muscache.com/im/pictures/user/User-583132701/original/2b0c3adc-f9c5-4d35-82dd-a5ecd202762c.jpeg?im_w=240" data-original-uri="https://a0.muscache.com/im/pictures/user/User-583132701/original/2b0c3adc-f9c5-4d35-82dd-a5ecd202762c.jpeg?im_w=240" style="--dls-liteimage-object-fit: cover;">
-                                </div>
-                                <div class="host-details">
-                                    <h1 class="host-name">Anfitriã(o): Polly Pocket</h1>
-                                    <p>Grande aventureira</p>
+                <div class="room-info">
+                    <div class="info-box">
+                        <div class="info">
+                            <div class="title-info">
+                                <h1>Westford, Massachussets, Estados Unidos</h1>
+                                <ul class="title-items">
+                                    <li class="room-item">4 Hóspedes</li>
+                                    <div>
+                                        <span class="ball"></span>
+                                        <li class="room-item">1 Quarto</li>
+                                    </div>
+                                    <div>
+                                        <span class="ball"></span>
+                                        <li class="room-item">5 Camas</li>
+                                    </div>
+                                    <div>
+                                        <span class="ball"></span>
+                                        <li class="room-item">Lavabo privado</li>
+                                    </div>
+                                </ul>
+                            </div>
+                            <div class="host">
+                                <div class="host-info">
+                                    <div class="host-image-box">
+                                        <img class="host-image" src="https://a0.muscache.com/im/pictures/user/User-583132701/original/2b0c3adc-f9c5-4d35-82dd-a5ecd202762c.jpeg?im_w=240" data-original-uri="https://a0.muscache.com/im/pictures/user/User-583132701/original/2b0c3adc-f9c5-4d35-82dd-a5ecd202762c.jpeg?im_w=240" style="--dls-liteimage-object-fit: cover;">
+                                    </div>
+                                    <div class="host-details">
+                                        <h1 class="host-name">Anfitriã(o): Polly Pocket</h1>
+                                        <p>Grande aventureira</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="benefits">
-                            <div class="benefit">
-                                <div class="benefit-icon-box">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 24px; width: 24px; fill: currentcolor;"><path d="m10.66 9.74-8.23 1-.15.02a2 2 0 0 0-.93 3.47l6.2 5.46-2 8.52-.03.15a2 2 0 0 0 2.96 2.05L16 26.15l7.52 4.26.13.07a2 2 0 0 0 2.8-2.27l-2-8.52 6.2-5.46.11-.11a2 2 0 0 0-1.19-3.38l-8.23-1-3.53-7.55a2 2 0 0 0-3.62 0zM12 11.59l4-8.56 4 8.56 9.33 1.13-7.1 6.26 2.27 9.69-8.5-4.82-8.5 4.82 2.28-9.7-7.11-6.25z"></path></svg>
+                            <div class="benefits">
+                                <div class="benefit">
+                                    <div class="benefit-icon-box">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 24px; width: 24px; fill: currentcolor;"><path d="m10.66 9.74-8.23 1-.15.02a2 2 0 0 0-.93 3.47l6.2 5.46-2 8.52-.03.15a2 2 0 0 0 2.96 2.05L16 26.15l7.52 4.26.13.07a2 2 0 0 0 2.8-2.27l-2-8.52 6.2-5.46.11-.11a2 2 0 0 0-1.19-3.38l-8.23-1-3.53-7.55a2 2 0 0 0-3.62 0zM12 11.59l4-8.56 4 8.56 9.33 1.13-7.1 6.26 2.27 9.69-8.5-4.82-8.5 4.82 2.28-9.7-7.11-6.25z"></path></svg>
+                                    </div>
+                                    <div class="benefit-details">
+                                        <h1 class="host-name">Durma sob as estrelas</h1>
+                                        <p>Aconchegue-se na minha barraca Action park gigante!</p>
+                                    </div>
+                                </div> 
+                                <div class="benefit">
+                                    <div class="benefit-icon-box">
+                                        <svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 24px; width: 24px; display: block; fill: currentcolor;"><path d="m23.75 16.07-11.75-6.9v-1.23c1.08-.27 2-1.34 2-2.44a2.5 2.5 0 1 0 -5 0 .5.5 0 0 0 1 0 1.5 1.5 0 1 1 3 0c0 .72-.78 1.5-1.5 1.5a.5.5 0 0 0 -.5.5v1.77l-10.77 6.81a.48.48 0 0 0 -.23.41v.01c0 .26.19.51.5.51h23c .32 0 .51-.26.5-.52v-.01a.48.48 0 0 0 -.25-.41zm-21.52-.07 9.36-5.92 10.07 5.92z" fill-rule="evenodd"></path></svg>                                
+                                    </div>
+                                    <div class="benefit-details">  
+                                        <h1 class="host-name">Arrase nos looks com minhas roupas</h1>
+                                        <p>Tem vestidos, jaquetas glamurosas, lenços e muito mais pra você se esbaldar!</p>
+                                    </div>
                                 </div>
-                                <div class="benefit-details">
-                                    <h1 class="host-name">Durma sob as estrelas</h1>
-                                    <p>Aconchegue-se na minha barraca Action park gigante!</p>
-                                </div>
-                            </div> 
-                            <div class="benefit">
-                                <div class="benefit-icon-box">
-                                    <svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 24px; width: 24px; display: block; fill: currentcolor;"><path d="m23.75 16.07-11.75-6.9v-1.23c1.08-.27 2-1.34 2-2.44a2.5 2.5 0 1 0 -5 0 .5.5 0 0 0 1 0 1.5 1.5 0 1 1 3 0c0 .72-.78 1.5-1.5 1.5a.5.5 0 0 0 -.5.5v1.77l-10.77 6.81a.48.48 0 0 0 -.23.41v.01c0 .26.19.51.5.51h23c .32 0 .51-.26.5-.52v-.01a.48.48 0 0 0 -.25-.41zm-21.52-.07 9.36-5.92 10.07 5.92z" fill-rule="evenodd"></path></svg>                                
-                                </div>
-                                <div class="benefit-details">  
-                                    <h1 class="host-name">Arrase nos looks com minhas roupas</h1>
-                                    <p>Tem vestidos, jaquetas glamurosas, lenços e muito mais pra você se esbaldar!reira</p>
-                                </div>
-                            </div>
 
-                            <div class="benefit">
-                                <div class="benefit-icon-box">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 24px; width: 24px; fill: currentcolor;"><path d="M25 2a5 5 0 0 1 5 4.78V25a5 5 0 0 1-4.78 5H7a5 5 0 0 1-5-4.78V7a5 5 0 0 1 4.78-5H7zm0 2H7a3 3 0 0 0-3 2.82V11h2V6h20v20H6v-5H4v4a3 3 0 0 0 2.82 3H25a3 3 0 0 0 3-2.82V7a3 3 0 0 0-2.82-3zm-1 4H8v16h16zm-8 3a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zM6 13H4v6h2z"></path></svg>                                </div>
-                                <div class="benefit-details"> 
-                                    <h1 class="host-name">Faça lindas bijuterias para suas BFFs</h1>
-                                    <p>Dê asas a sua criatividade na minha Estação das Pulseiras da Amizade.</p>
+                                <div class="benefit">
+                                    <div class="benefit-icon-box">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 24px; width: 24px; fill: currentcolor;"><path d="M25 2a5 5 0 0 1 5 4.78V25a5 5 0 0 1-4.78 5H7a5 5 0 0 1-5-4.78V7a5 5 0 0 1 4.78-5H7zm0 2H7a3 3 0 0 0-3 2.82V11h2V6h20v20H6v-5H4v4a3 3 0 0 0 2.82 3H25a3 3 0 0 0 3-2.82V7a3 3 0 0 0-2.82-3zm-1 4H8v16h16zm-8 3a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zM6 13H4v6h2z"></path></svg>                                </div>
+                                    <div class="benefit-details"> 
+                                        <h1 class="host-name">Faça lindas bijuterias para suas BFFs</h1>
+                                        <p>Dê asas a sua criatividade na minha Estação das Pulseiras da Amizade.</p>
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="benefit">
-                                <div class="benefit-icon-box">
-                                    <svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 24px; width: 24px; display: block; fill: currentcolor;"><path d="m10.5 0a .5.5 0 0 0 -.5.5v7a .5.5 0 0 1 -.49.5h-1.51v-7.5a.5.5 0 1 0 -1 0v7.5h-1.51a.5.5 0 0 1 -.49-.5v-7a .5.5 0 1 0 -1 0v7c0 .83.67 1.5 1.49 1.5h1.51v5c0 .03.01.06.02.09a1.49 1.49 0 0 0 -1.02 1.41v7c0 .83.67 1.5 1.5 1.5s1.5-.67 1.5-1.5v-7c0-.66-.43-1.21-1.02-1.41.01-.03.02-.06.02-.09v-5h1.51a1.5 1.5 0 0 0 1.49-1.5v-7a .5.5 0 0 0 -.5-.5zm-2.5 15.5v7a .5.5 0 0 1 -.5.5.5.5 0 0 1 -.5-.5v-7c0-.28.22-.5.5-.5s.5.22.5.5zm11.5-15.5h-2c-1.4 0-2.5 1.07-2.5 2.5v7c0 1.43 1.1 2.5 2.5 2.5h1.5v2.09a1.49 1.49 0 0 0 -.5-.09c-.83 0-1.5.67-1.5 1.5v7c0 .83.67 1.5 1.5 1.5s1.5-.67 1.5-1.5v-22.5zm-2 11c-.86 0-1.5-.63-1.5-1.5v-7c0-.87.65-1.5 1.5-1.5h1.5v10zm1.5 11.5a.5.5 0 0 1 -.5.5.5.5 0 0 1 -.5-.5v-7c0-.28.22-.5.5-.5s.5.22.5.5z" fill-rule="evenodd"></path></svg>                                
-                               </div>
-                                <div class="benefit-details"> 
-                                    <h1 class="host-name">Delicie-se com as guloseimas favoritas dos anos 90</h1>
-                                    <p>Além de batatas fritas e muitos doces também</p>
+                                <div class="benefit">
+                                    <div class="benefit-icon-box">
+                                        <svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 24px; width: 24px; display: block; fill: currentcolor;"><path d="m10.5 0a .5.5 0 0 0 -.5.5v7a .5.5 0 0 1 -.49.5h-1.51v-7.5a.5.5 0 1 0 -1 0v7.5h-1.51a.5.5 0 0 1 -.49-.5v-7a .5.5 0 1 0 -1 0v7c0 .83.67 1.5 1.49 1.5h1.51v5c0 .03.01.06.02.09a1.49 1.49 0 0 0 -1.02 1.41v7c0 .83.67 1.5 1.5 1.5s1.5-.67 1.5-1.5v-7c0-.66-.43-1.21-1.02-1.41.01-.03.02-.06.02-.09v-5h1.51a1.5 1.5 0 0 0 1.49-1.5v-7a .5.5 0 0 0 -.5-.5zm-2.5 15.5v7a .5.5 0 0 1 -.5.5.5.5 0 0 1 -.5-.5v-7c0-.28.22-.5.5-.5s.5.22.5.5zm11.5-15.5h-2c-1.4 0-2.5 1.07-2.5 2.5v7c0 1.43 1.1 2.5 2.5 2.5h1.5v2.09a1.49 1.49 0 0 0 -.5-.09c-.83 0-1.5.67-1.5 1.5v7c0 .83.67 1.5 1.5 1.5s1.5-.67 1.5-1.5v-22.5zm-2 11c-.86 0-1.5-.63-1.5-1.5v-7c0-.87.65-1.5 1.5-1.5h1.5v10zm1.5 11.5a.5.5 0 0 1 -.5.5.5.5 0 0 1 -.5-.5v-7c0-.28.22-.5.5-.5s.5.22.5.5z" fill-rule="evenodd"></path></svg>                                
+                                </div>
+                                    <div class="benefit-details"> 
+                                        <h1 class="host-name">Delicie-se com as guloseimas favoritas dos anos 90</h1>
+                                        <p>Além de batatas fritas e muitos doces também</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-            </div>
-            <div class="booking-box">a</div>
+                    <div class="booking-box">a</div>
+                </div>  
+                a     
         </div>
     </main>
             
