Text component started

--- a/2_SEM/Aula2/src/pages/home/index.html
+++ b/2_SEM/Aula2/src/pages/home/index.html
@@ -149,10 +149,33 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="translation">
+                            <p>Algumas informações foram traduzidas automaticamente. <a href="">Exibir original</a></p>
+                        </div>
+                    <!--Início da div room-description, que contém os parágrafos e subtítulos-->
+                        <div class="room-description">
+                            <div class="paragraph">
+                                <p>Oi, pessoal! Vai rolar uma festa do pijama na minha casa! Quem topa? Vou sair para comemorar meu aniversário de 35 anos, mas meu estojo Festa do Pijama tamanho gigante será de vocês por uma noite. Deixei tudo daquele jeitinho, como se estivéssemos em 1994! Dá para acreditar que já faz tanto tempo?! Tragam suas BFFs. Vai ser um encontro retrô muito divertido!</p>
+                            </div>
+                            <div class="paragraph">
+                                <b>O que vocês farão</b><br>
+                                As crianças dos anos 90 arrasavam no quesito festas do pijama. Todo mundo sabe disso. Por isso, preparei uma festa do pijama que vai fazer vocês se sentirem como se ainda estivessem nos anos 90! Imaginem só: confecção de bijuterias, comidinhas da época, câmeras Polaroid... vai ser INCRÍVEL. Basicamente, transformei meu estojo Festa do Pijama em uma máquina do tempo onde vocês podem dar asas à imaginação, porque não há aventura maior do que aquela que criamos com nossas mentes.
+                            </div>
+                        </div>
                     </div>
-                    <div class="booking-box">a</div>
+
+
+                    <div class="booking-info">
+                        <div class="booking-box">
+                            <div class="booking-text">
+                                <h1><b>R$489 </b>por hóspede</h1>
+                                <p>Encerra em: 29 de Agosto, 3:59</p>
+                            </div>
+                            <button class="booking-btn"><b>Enviar pedido</b></button>
+                        </div>
+                    </div>
                 </div>  
-                a     
+                -- Fim da div.room-info --     
         </div>
     </main>
             
