Host card and paragraphs

--- a/2_SEM/Aula2/src/pages/home/index.html
+++ b/2_SEM/Aula2/src/pages/home/index.html
@@ -161,14 +161,48 @@
                                 <b>O que vocês farão</b><br>
                                 As crianças dos anos 90 arrasavam no quesito festas do pijama. Todo mundo sabe disso. Por isso, preparei uma festa do pijama que vai fazer vocês se sentirem como se ainda estivessem nos anos 90! Imaginem só: confecção de bijuterias, comidinhas da época, câmeras Polaroid... vai ser INCRÍVEL. Basicamente, transformei meu estojo Festa do Pijama em uma máquina do tempo onde vocês podem dar asas à imaginação, porque não há aventura maior do que aquela que criamos com nossas mentes.
                             </div>
+                            <div class="paragraph">
+                                <p>Confiram a programação!</p>
+                            </div>
+                            <div class="paragraph">
+                                <p>• Na minha mesa de piquenique, vocês vão encontrar fios coloridos, pingentes incríveis e diversas contas e miçangas. Vocês poderão usar tudo isso para expressar seu amor eterno às suas BFFs como só uma criança dos anos 90 faria: criando bijuterias personalizadas. Podem até fazer uma para mim! Mas lembrem-se de que meus pulsos são muito pequenos.</p>
+                            </div>
+                            <div class="paragraph">
+                                <p>• Provem os looks mais icônicos do meu closet (sim, aqueles que vocês achavam bom de morder quando eram menores!). Vocês podem vestir as peças por cima de suas próprias roupas. Vai ser um arraso! Mas nada de mordê-las, hein!</p>
+                            </div>
+                            <div class="paragraph">
+                                <p>• Lembram quando a gente se maquiava e conversava até de madrugada? Minha penteadeira tem tudo que vocês precisam para reviver essa magia. Unhas postiças e presilhas de borboleta... Quem vai querer?</p>
+                            </div>
+                            <div class="paragraph">
+                                <p>• Relaxem e curtam uma volta ao passado maratonando filmes em VHS. Lembram disso?! O sofá se abre como uma cama, então se esparramem como quiserem (tragam suas próprias cobertas).</p>
+                            </div>
+                            <div class="paragraph">
+                                <p>• Aqui vocês vão encontrar uma quantidade absurda das minhas guloseimas preferidas da época mais marcante da história das guloseimas. Balas tipo Ring Pops, Push Pops e Baby Bottle Pops... Só de pensar já me dá água na boca!</p>
+                            </div>
+                            <div class="paragraph">
+                                <p>• À noite, acampem ao ar livre, sob as estrelas, na minha barraca Action Park. Troquem segredos, contem histórias de fantasmas e divirtam-se no aconchego dos quatro sacos de dormir que vou emprestar a vocês.</p>
+                            </div>
+                            <div class="paragraph">
+                                <b>Outras observações</b>
+                                <p>Meu estojo não fecha. Assim como eu, ele está sempre aberto para novas aventuras.</p>
+                            </div>
+                        </div>
+
+                        <h2 class="receive-text">Quem vai receber você</h2>
+
+                        <div class="host-description">
+                            <div class="host-image-box2">
+                                <img class="host-image2" src="https://a0.muscache.com/im/pictures/user/User-583132701/original/2b0c3adc-f9c5-4d35-82dd-a5ecd202762c.jpeg?im_w=720" alt="">
+                                <svg class="shield" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" style="display:block;height:16px;width:16px;fill:white; padding: 10px; background-color: var(--vermelho-airbnb); border-radius: 100%; position: relative; right:0; " aria-label="Anfitrião verificado" role="img" focusable="false"><path d="m16 .8.56.37C20.4 3.73 24.2 5 28 5h1v12.5C29 25.57 23.21 31 16 31S3 25.57 3 17.5V5h1c3.8 0 7.6-1.27 11.45-3.83L16 .8zm7 9.08-9.5 9.5-4.5-4.5L6.88 17l6.62 6.62L25.12 12 23 9.88z"></path></svg>
+                            </div>
+                            <h3>Polly Pocket</h3>
+                            <p>Começou a hospedar em 2024</p>
                         </div>
                     </div>
-
-
                     <div class="booking-info">
                         <div class="booking-box">
                             <div class="booking-text">
-                                <h1><b>R$489 </b>por hóspede</h1>
+                                <h3><b>R$489 </b>por hóspede</h3>
                                 <p>Encerra em: 29 de Agosto, 3:59</p>
                             </div>
                             <button class="booking-btn"><b>Enviar pedido</b></button>
