room section finished

--- a/2_SEM/Aula2/src/pages/home/index.html
+++ b/2_SEM/Aula2/src/pages/home/index.html
@@ -188,15 +188,63 @@
                             </div>
                         </div>
 
-                        <h2 class="receive-text">Quem vai receber você</h2>
+                        <div class="host-data">
+                            <h2 class="receive-text">Quem vai receber você</h2>
 
-                        <div class="host-description">
-                            <div class="host-image-box2">
-                                <img class="host-image2" src="https://a0.muscache.com/im/pictures/user/User-583132701/original/2b0c3adc-f9c5-4d35-82dd-a5ecd202762c.jpeg?im_w=720" alt="">
-                                <svg class="shield" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" style="display:block;height:16px;width:16px;fill:white; padding: 10px; background-color: var(--vermelho-airbnb); border-radius: 100%; position: relative; right:0; " aria-label="Anfitrião verificado" role="img" focusable="false"><path d="m16 .8.56.37C20.4 3.73 24.2 5 28 5h1v12.5C29 25.57 23.21 31 16 31S3 25.57 3 17.5V5h1c3.8 0 7.6-1.27 11.45-3.83L16 .8zm7 9.08-9.5 9.5-4.5-4.5L6.88 17l6.62 6.62L25.12 12 23 9.88z"></path></svg>
+                            <div class="host-description">
+                                <div class="host-image-box2">
+                                    <img class="host-image2" src="https://a0.muscache.com/im/pictures/user/User-583132701/original/2b0c3adc-f9c5-4d35-82dd-a5ecd202762c.jpeg?im_w=720" alt="">
+                                    <svg class="shield" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" style="display:block;height:16px;width:16px;fill:white; padding: 10px; background-color: var(--vermelho-airbnb); border-radius: 100%; position: relative; right:0; " aria-label="Anfitrião verificado" role="img" focusable="false"><path d="m16 .8.56.37C20.4 3.73 24.2 5 28 5h1v12.5C29 25.57 23.21 31 16 31S3 25.57 3 17.5V5h1c3.8 0 7.6-1.27 11.45-3.83L16 .8zm7 9.08-9.5 9.5-4.5-4.5L6.88 17l6.62 6.62L25.12 12 23 9.88z"></path></svg>
+                                </div>
+                                <h3>Polly Pocket</h3>
+                                <p>Começou a hospedar em 2024</p>
                             </div>
-                            <h3>Polly Pocket</h3>
-                            <p>Começou a hospedar em 2024</p>
+                            <div class="host-fun-facts">
+                                <div class="fun-fact">
+                                    <div class="fun-fact-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 24px; width: 24px; fill: currentcolor;"><path d="m20.61 8.21.1.08 3 3a1 1 0 0 1 .08 1.32l-.08.1-18 18a1 1 0 0 1-1.32.08l-.1-.08-3-3a1 1 0 0 1-.08-1.32l.08-.1 18-18a1 1 0 0 1 1.32-.08zM16 14.41 3.41 27 5 28.58 17.59 16zm4-4-2.58 2.6L19 14.58 21.58 12zm6-.41h5v2h-5zm2.3-7.7 1.4 1.4-4 4-1.4-1.4zM22 1v5h-2V1z"></path></svg>
+                                    </div>
+                                    <div class="fun-fact-text">
+                                        <p>Habilidade mais inútil: Consigo passar por baixo da porta</p>
+                                    </div>
+                                </div>
+                                <div class="fun-fact">
+                                    <div class="fun-fact-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 24px; width: 24px; fill: currentcolor;"><path d="M16 .33a15.67 15.67 0 1 1 0 31.34A15.67 15.67 0 0 1 16 .33zm0 2a13.67 13.67 0 1 0 0 27.34 13.67 13.67 0 0 0 0-27.34zm1 3v10.1l8.74 5.04-1 1.73L15 16.58V5.33z"></path></svg>                                </div>
+                                    <div class="fun-fact-text">
+                                        <p>Passo muito tempo: Jogando minigolf</p>
+                                    </div>
+                                </div>
+                                <div class="fun-fact">
+                                    <div class="fun-fact-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 24px; width: 24px; fill: currentcolor;"><path d="M30 4H20c-1.64 0-3.09.8-4 2.03A4.99 4.99 0 0 0 12 4H2a2 2 0 0 0-2 2v19c0 1.1.9 2 2 2h10a3 3 0 0 1 3 3h2a3 3 0 0 1 3-3h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm-4 2v8.61l-2-.66-2 .66V6h4zM15 26a4.98 4.98 0 0 0-3-1H2V6h10a3 3 0 0 1 3 3v17zm15-1H20a4.97 4.97 0 0 0-3 1V9a3 3 0 0 1 3-3v11.39l4-1.34 4 1.34V6h2v19z"></path></svg>                                </div>
+                                    <div class="fun-fact-text">
+                                        <p>Título da minha biografia: Uma pequena mulher</p>
+                                    </div>
+                                </div>
+                                <div class="fun-fact">
+                                    <div class="fun-fact-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 24px; width: 24px; fill: currentcolor;"><path d="M23.02 3a8.3 8.3 0 0 0-5.58 2.44L16 6.88l-1.44-1.44a8.31 8.31 0 0 0-11.79 0 8.3 8.3 0 0 0-2.44 5.9c0 4.92 2.49 8.84 8.04 13.43l.7.58.75.58.77.6.4.3.82.6.86.62.89.63.92.64L16 30.35l1.33-.9 1.06-.73.66-.46.7-.5.85-.62c7.4-5.45 11.07-10.12 11.07-15.8A8.3 8.3 0 0 0 23.33 3zm.31 2a6.31 6.31 0 0 1 6.34 6.33c0 4.3-2.62 8.12-8.01 12.48l-.72.57-.75.58-.79.58-.81.6-.7.49-.65.45-1.24.85-.36-.24-.9-.63-.87-.6-.42-.31-.81-.6-.4-.29-.76-.58-.74-.57c-5.84-4.6-8.4-8.31-8.4-12.78A6.3 6.3 0 0 1 8.66 5c1.67 0 3.27.65 4.48 1.85L16 9.71l2.86-2.86A6.31 6.31 0 0 1 23.33 5z"></path></svg>                                </div>
+                                    <div class="fun-fact-text">
+                                        <p>Curto muito: Titch, Pixie e toda a galera!</p>
+                                    </div>
+                                </div>
+                                <div class="paragraph2">
+                                    <p>Sou uma menina normal, mas meu tamanho nem tanto. Mas, mesmo pequena, nenhuma aventura é grande demais para mim. Seja surfando a onda perfeita, desfilando na passarela, estou sempre buscando uma experiência épica, ainda mais quando estou com minhas BFFs.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bedroom-info">
+                            <h2>Onde você vai dormir</h2>
+                            <div class="bedroom-box">
+                                <div class="bedroom-image">
+                                    <img src="../../../public/assets/img/polly-bedroom.webp" alt="Imagem do quarto">
+                                </div>
+                                <div class="bedroom-text">
+                                    <h4>Quarto</h3>
+                                    <p>5 camas de solteiro</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="booking-info">
@@ -208,7 +256,7 @@
                             <button class="booking-btn"><b>Enviar pedido</b></button>
                         </div>
                     </div>
-                </div>  
+                </div><br>  
                 -- Fim da div.room-info --     
         </div>
     </main>
