Section maps finished and section iconic started

--- a/2_SEM/Aula2/src/pages/home/index.html
+++ b/2_SEM/Aula2/src/pages/home/index.html
@@ -265,7 +265,28 @@
                 <h2>Onde você estará</h2>
                 <p>Westford, Massachussets, Estados Unidos</p>
                 <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d47019.691096219125!2d-71.448754!3d42.561011!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDLCsDMzJzQ2LjYiTiA3McKwMjUnNTkuOSJX!5e0!3m2!1spt-BR!2sbr!4v1724809718530!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                </div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d47019.691096219125!2d-71.448754!3d42.561011!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDLCsDMzJzQ2LjYiTiA3McKwMjUnNTkuOSJX!5e0!3m2!1spt-BR!2sbr!4v1724809718530!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                
+                </div>
+                <p>Verificamos que a localização deste anúncio está correta. <a href="">Saiba mais</a></p>
+            </div>
+            <div class="maps-title highlights">
+                <h2>Destaques do bairro</h2>
+                <p>O estojo Festa do Pijama fica na minha cidade natal: Littleton, em Massachusetts, nos Estados Unidos. Pode não ser o ambiente mais urbano, mas é exatamente por isso que gosto de lá. Muito espaço para imaginação, curtição e aventuras! Vocês PRECISAM conhecer.</p>
+            </div>
+        </div>
+    </section>
+    <section id="iconic">
+        <div class="container">
+            <div class="adjust-center">
+                <div class="iconic-img-box">
+                    <img class= "iconic-img" src="../../../public/assets/img/iconic-room.avif" alt="Símbolo de reconhecimento do airbnb">
+                </div>
+            </div>
+            <div class="adjust-center">
+                <div class="iconic-text">
+                    <h1>Icônicos</h1>
+                    <p>Experiências extraordinárias oferecidas pelos maiores nomes da música, do cinema, da TV, da arte, dos esportes e muito mais.</p>
+                </div>
             </div>
         </div>
     </section>
