--- a/2_SEM/Aula2/src/pages/home/index.html
+++ b/2_SEM/Aula2/src/pages/home/index.html
@@ -282,11 +282,45 @@
                     <img class= "iconic-img" src="../../../public/assets/img/iconic-room.avif" alt="Símbolo de reconhecimento do airbnb">
                 </div>
             </div>
-            <div class="adjust-center">
+            <div class="adjust-center down">
                 <div class="iconic-text">
                     <h1>Icônicos</h1>
                     <p>Experiências extraordinárias oferecidas pelos maiores nomes da música, do cinema, da TV, da arte, dos esportes e muito mais.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="booking-section">
+        <div class="container">
+            <div class="booking-grid">
+                <div class="booking-item">
+                    <div class="booking-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 33px; width: 33px; fill: currentcolor;"><path d="M30.51 5.88A5.06 5.06 0 0 0 26 3H6a5.06 5.06 0 0 0-4.51 2.88A4.94 4.94 0 0 0 1 8v16a5 5 0 0 0 5 5h20a5 5 0 0 0 5-5V8a4.94 4.94 0 0 0-.49-2.12ZM6 5h20a2.97 2.97 0 0 1 1.77.6L17.95 14a2.98 2.98 0 0 1-3.9 0L4.23 5.6A2.97 2.97 0 0 1 6 5Zm23 19a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V8a2.97 2.97 0 0 1 .1-.74l9.65 8.27a4.97 4.97 0 0 0 6.5 0l9.65-8.27A2.97 2.97 0 0 1 29 8Z"></path></svg>
+                    </div>
+                    <div class="booking-requirement-text">
+                        <h4>Pedido de reserva</h4>
+                        <p>Escolha suas datas, inclua seus hóspedes e responda por que você deseja ir.</p>
+                    </div>
+                </div>
+                <div class="booking-item">
+                    <div class="booking-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 33px; width: 33px; fill: currentcolor;"><path d="M16 1a15 15 0 1 1 0 30 15 15 0 0 1 0-30zm0 2a13 13 0 1 0 0 26 13 13 0 0 0 0-26zm7 7.59L24.41 12 13.5 22.91 7.59 17 9 15.59l4.5 4.5z"></path></svg>
+                    </div>
+                    <div class="booking-requirement-text">
+                        <h4>Processo de seleção</h4>
+                        <p>Primeiro, escolheremos aleatoriamente um conjunto de hóspedes em potencial. Em seguida, analisaremos suas respostas para entender suas perspectivas e conexão com o ícone. Por fim, convidaremos os hóspedes selecionados a reservarem.</p>
+                    </div>
+                </div>
+                <div class="booking-item">
+                    <div class="booking-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 33px; width: 33px; fill: currentcolor;"><path d="M29 5a2 2 0 0 1 2 1.85V25a2 2 0 0 1-1.85 2H3a2 2 0 0 1-2-1.85V7a2 2 0 0 1 1.85-2H3zm0 2H3v18h26zm-3 12v2h-8v-2zm-16-8a3 3 0 0 1 2.5 4.67A5 5 0 0 1 15 20h-2a3 3 0 0 0-2-2.83V14a1 1 0 0 0-2-.12v3.29A3 3 0 0 0 7 20H5a5 5 0 0 1 2.5-4.33A3 3 0 0 1 10 11zm16 4v2h-8v-2zm0-4v2h-8v-2z"></path></svg>
+                    </div>
+                    <div class="booking-requirement-text">
+                        <h4>Requisitos</h4>
+                        <p>Para participar, você precisa ter uma conta ativa no Airbnb, o aplicativo do Airbnb e ser residente em um país ou região elegível. A participação é gratuita.</p>
+                    </div>
+                </div>
+            
             </div>
         </div>
     </section>
