Site finished without responsiveness

--- a/2_SEM/Aula2/src/pages/home/index.html
+++ b/2_SEM/Aula2/src/pages/home/index.html
@@ -583,7 +583,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
+        <div class="container dois">
             <div class="footer-links">
                 <h4 class="footer-topic">Atendimento</h4>
                 <ul>
@@ -617,7 +617,7 @@
                 </ul>
             </div>
         </div>
-        <div class="footer-last-info">
+        <div class="container dois">
             <div class="footer-st-info">
                 <p>@ 2024 Airbnb, Inc.</p>
                 <ul class="title-items">
