--- a/2_SEM/Aula2/src/pages/home/index.html
+++ b/2_SEM/Aula2/src/pages/home/index.html
@@ -15,6 +15,14 @@
 
 <body>
     <main>
+        <div class="responsive-carousel">
+            <nav class="responsive-nav">
+            </nav>
+            <div class="carousel">
+                
+            </div>
+            <!--Aqui acaba o carrossel-->
+        </div>
         <nav class="nav">
             <div class="nav-box">
                 <div class="logo-box">
@@ -29,9 +37,9 @@
                 </div>
                 <div class="nav-content">
                     <div class="search-bar">
-                        <button class="search-bar-link">Qualquer lugar</button>
-                        <button class="search-bar-link">Qualquer semana</button>
-                        <button class="search-bar-link">Hóspedes?</button>
+                        <button class="search-bar-link"><span class="search-bar-min-link">Qualq...</span><span class="search-bar-full-link">Qualquer lugar</span></button>
+                        <button class="search-bar-link"><span class="search-bar-min-link">Qualq...</span><span class="search-bar-full-link">Qualquer semana</span></button>
+                        <button class="search-bar-link"><span class="search-bar-min-link">Hósp...</span><span class="search-bar-full-link">Hóspedes?</span></button>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true"
                             role="presentation" focusable="false"
                             style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
@@ -125,6 +133,10 @@
                 <div class="img5">
                     <img src="../../../public/assets/img/planta-da-casa-da-polly-pocket.webp" alt="Imagem da galeria">
                 </div>
+                <button class="show-more">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;"><path fill-rule="evenodd" d="M3 11.5a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3zm5 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3zm5 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3zm-10-5a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3zm5 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3zm5 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3zm-10-5a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3zm5 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3zm5 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3z"></path></svg>
+                    Mostrar todas as fotos
+                </button>
             </div>
             <div class="room-info">
                 <div class="info-box">
