--- a/2_SEM/Aula6/gemini-front/index.html
+++ b/2_SEM/Aula6/gemini-front/index.html
@@ -10,17 +10,15 @@
 </head>
 <body>
 
-    <div class="container">
-        <img src="img/robo.png" alt="">
-        <main class="row align-content-center text-center" style="margin: -120px 0">
-            <h1>Conversação íntima com o Gemi</h1>
-
-            <form action="">
-                <div class="input-group">
-                    <input type="text" class="form-control" name="message" id="message">
-                    <button class="btn btn-danger">Enviar</button>
-                </div>
-            </form>
+    <div class="container2">
+        <img class="gemi invisivel" src="img/robo.png" alt="">
+        <form action="" class=form-request>
+            <div class="input-group">
+                <input type="text" class="form-control" name="message" id="message">
+                <button class="btn btn-danger">Enviar</button>
+            </div>
+        </form>
+        <main class="row align-content-center text-center">
 
             <div id="chat-log">
                <!--  <div class="message message--sent">
